# smithy-test

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  _typos.toml  deny.toml  smithy-build.json  test.http
.github/workflows/: build.yml  smithy.yml
crates/client/src/: main.rs
crates/service/: Cargo.toml
crates/service/src/: api.rs  lib.rs
crates/service/src/middleware/: bearer_auth.rs
smithy/: smithy-build.json
smithy/model/: common.smithy  main.smithy  todo.smithy
web/: package.json
web/src/: client.ts  main.ts
