[workspace]
members = [
  "smithy/gen/rust-client-sdk",
  "smithy/gen/rust-server-sdk",
  "crates/client",
  "crates/server",
  "crates/service",
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.6", features = ["headers", "query", "tracing"] }
echo-client-sdk = { path = "smithy/gen/rust-client-sdk" }
echo-server-sdk = { path = "smithy/gen/rust-server-sdk" }
echo-service = { path = "crates/service" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "time",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
